# auron

./: .gitignore  .rat-excludes  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ISSUE_AND_PR.md  OPTIMIZATION_GUIDE.md  README.md  auron-build.sh  auron_spark_builtin_expr_coverage.txt  comet_spark_builtin_expr_coverage.txt  dedup_lines.py  pom.xml  spark_builtin_expr_coverage.txt  spark_builtin_funcs.txt  spark_bulitin_funcs_plan.txt  unsupported_exprs.txt  unsupported_exprs.txt.dedup.txt
.github/: dependabot.yml  labeler.yml
.github/workflows/: build-amd64-releases.yml  build-arm-releases.yml  build-arm-releases.yml_disable  build-ce7-releases.yml  celeborn.yml  flink.yml  hudi.yml  labeler.yml  license.yml  paimon.yml  paimon.yml_disable  pr_build.yml  reusable_build_test.yml  reusable_test.yml  rust-test.yml  stale.yml  style.yml  style.yml_disable  tpcds-reusable.yml  tpcds-reusble.yml  tpcds.yml  tpcds.yml_disable  uniffle.yml
auron-flink-extension/: pom.xml
auron-flink-extension/auron-flink-runtime/: pom.xml
auron-fuzz-testing/: result-diffs.md  run.sh
auron-spark-tests/spark33/: pom.xml
auron-spark-tests/spark33/src/test/resources/: log4j2.properties
auron-spark-ui/: pom.xml
dev/: checkstyle-suppressions.xml  checkstyle.xml  reformat  scalastyle-config.xml
dev/auron-it/: README.txt  auron-it.sh  it.sh  local-run-tpcds-test.sh  local-run-tpcds.sh  local-run.sh  pom.xml  run-it.sh  run-tpcds-test  tpcds-it.sh
dev/auron-it/src/test/resources/: log4j.properties  log4j2.properties
dev/docker-build/: docker-compose.yml
dev/mvn-build-helper/: build-native.sh
dev/mvn-build-helper/assembly/: pom.xml
dev/mvn-build-helper/proto/: pom.xml
docs/: native-python-udf.md  spark_builtin_expr_coverage.txt  spark_expressions_support.md
docs/superpowers/plans/: 2026-04-09-python-udf-native.md
docs/superpowers/specs/: 2026-03-26-optimization-map-design.md  2026-04-09-python-udf-native-design.md
native-engine/: CODE_QUALITY.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  RUST_OPTIMIZATION_ANALYSIS.md
native-engine/auron/: Cargo.toml
native-engine/auron-jni-bridge/: Cargo.toml
native-engine/auron-jni-bridge/src/: conf.rs  jni_bridge.rs
native-engine/auron-memmgr/: Cargo.toml
native-engine/auron-memmgr/src/: spill.rs
native-engine/auron-planner/: Cargo.toml  build.rs
native-engine/auron-planner/proto/: auron.proto
native-engine/auron-planner/src/: error.rs  lib.rs  planner.rs
native-engine/auron-python-udf/: Cargo.toml
native-engine/auron-python-udf/src/: expr.rs  lib.rs  type_convert.rs
native-engine/auron-serde/src/: lib.rs  planner.rs
native-engine/auron/src/: alloc.rs  exec.rs  lib.rs  logging.rs  metrics.rs  rt.rs
native-engine/datafusion-ext-commons/: Cargo.toml
native-engine/datafusion-ext-commons/src/: hadoop_fs.rs  lib.rs  spark_bit_array.rs  spark_hash.rs
native-engine/datafusion-ext-commons/src/arrow/: cast.rs  coalesce.rs  eq_comparator.rs  selection.rs
native-engine/datafusion-ext-commons/src/hash/: xxhash.rs
native-engine/datafusion-ext-commons/src/io/: batch_serde.rs  ipc_compression.rs  mod.rs  scalar_serde.rs
native-engine/datafusion-ext-exprs/: Cargo.toml
native-engine/datafusion-ext-exprs/benches/: starts_with.rs
native-engine/datafusion-ext-exprs/src/: bloom_filter_might_contain.rs  cast.rs  get_indexed_field.rs  get_map_value.rs  lib.rs  named_struct.rs  row_num.rs  spark_partition_id.rs  spark_scalar_subquery_wrapper.rs  spark_udf_wrapper.rs  string_contains.rs  string_ends_with.rs  string_starts_with.rs
native-engine/datafusion-ext-functions/: Cargo.toml
native-engine/datafusion-ext-functions/src/: lib.rs  spark_bround.rs  spark_check_overflow.rs  spark_crypto.rs  spark_dates.rs  spark_get_json_object.rs  spark_hash.rs  spark_initcap.rs  spark_isnan.rs  spark_make_array.rs  spark_make_decimal.rs  spark_monotonically_increasing_id.rs  spark_normalize_nan_and_zero.rs  spark_null_if.rs  spark_round.rs  spark_strings.rs  spark_unscaled_value.rs
native-engine/datafusion-ext-functions/src/brickhouse/: array_union.rs
native-engine/datafusion-ext-plans/: Cargo.toml
native-engine/datafusion-ext-plans/benches/: agg_hash_map.rs  batch_interleaver.rs  range_partitioning.rs  rdx_sort.rs  shuffle_writer.rs  spark_hash.rs  write_bytes_array_bench.rs
native-engine/datafusion-ext-plans/src/: agg_exec.rs  broadcast_join_build_hash_map_exec.rs  broadcast_join_exec.rs  expand_exec.rs  ffi_reader_exec.rs  generate_exec.rs  ipc_reader_exec.rs  limit_exec.rs  orc_exec.rs  parquet_exec.rs  parquet_sink_exec.rs  project_exec.rs  rename_columns_exec.rs  rss_shuffle_writer_exec.rs  shuffle_writer_exec.rs  sort_exec.rs  sort_merge_join_exec.rs  window_exec.rs
native-engine/datafusion-ext-plans/src/agg/: acc.rs  agg.rs  agg_ctx.rs  agg_hash_map.rs  agg_table.rs  avg.rs  bloom_filter.rs  collect.rs  count.rs  first.rs  first_ignores_null.rs  maxmin.rs  mod.rs  spark_udaf_wrapper.rs  sum.rs
native-engine/datafusion-ext-plans/src/agg/brickhouse/: collect.rs  combine_unique.rs
native-engine/datafusion-ext-plans/src/common/: cached_exprs_evaluator.rs  execution_context.rs  row_null_checker.rs
native-engine/datafusion-ext-plans/src/flink/: kafka_scan_exec.rs
native-engine/datafusion-ext-plans/src/flink/serde/: pb_deserializer.rs  shared_map_array_builder.rs
native-engine/datafusion-ext-plans/src/joins/: join_hash_map.rs  mod.rs  stream_cursor.rs  test.rs
native-engine/datafusion-ext-plans/src/scan/: mod.rs
native-engine/datafusion-ext-plans/src/shuffle/: buffered_data.rs  mod.rs  single_repartitioner.rs
native-engine/datafusion-ext-plans/src/window/: mod.rs  window_context.rs
scripts/: test_python_udf.py
spark-extension-shims-spark/: pom.xml
spark-extension-shims-spark/src/test/resources/: log4j.properties  log4j2-test.properties  log4j2.properties
spark-warehouse/org.apache.auron.AuronQuerySuite/t1/part=test test/: .part-00000-a25c359e-e283-4962-9e0d-ba6a6c75f4e1.c000.snappy.parquet.crc  part-00000-a25c359e-e283-4962-9e0d-ba6a6c75f4e1.c000.snappy.parquet
(+858 files in other folders)
