#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[workspace]
members = [
    "native-engine/datafusion-ext-commons",
    "native-engine/datafusion-ext-exprs",
    "native-engine/datafusion-ext-functions",
    "native-engine/datafusion-ext-plans",
    "native-engine/auron",
    "native-engine/auron-jni-bridge",
    "native-engine/auron-planner",
    "native-engine/auron-memmgr",
]

[workspace.lints.clippy]
useless_format = "allow"
useless_vec = "allow"
bool_assert_comparison = "allow"

unwrap_used = "deny"
panic = "deny"

# -------------------------- Pending Processing (Temporarily Allow) --------------------------
unnecessary_unwrap = "allow" # Disallow unwrap() on guaranteed Ok/Some values
needless_return = "allow" # Disallow redundant return statements (use last expression directly)
let_and_return = "allow" # Disallow declaring variable solely for return (e.g. let x=5; return x;)
identity_op = "allow" # Disallow no-op identity operations (e.g. x + 0, x * 1, x == x)
needless_borrow = "allow" # Disallow unnecessary borrows (e.g. &(&x), &vec[0] where vec[0] suffices)
redundant_closure = "allow" # Disallow redundant closure wrappers (e.g. |x| foo(x) → foo)
useless_conversion = "allow" # Disallow no-op type conversions (e.g. u32 → u32)
clone_on_copy = "allow" # Disallow clone() on Copy-implementing types (e.g. i32.clone() → i32)
redundant_locals = "allow" # Disallow unused redundant local variables
unit_arg = "allow" # Disallow passing unit type `()` where semantically meaningless
useless_asref = "allow" # Disallow unnecessary AsRef::as_ref() invocations
needless_as_bytes = "allow" # Disallow unnecessary &str → &[u8] conversions
unnecessary_cast = "allow" # Disallow no-op type casts (e.g. let x: i32 = (5 as i32);)
to_string_in_format_args = "allow" # Disallow redundant to_string() in format! arguments
unnecessary_literal_unwrap = "allow" # Disallow unwrap() on literal Option/Result (e.g. Some(5).unwrap() → 5)
collapsible_else_if = "allow" # Disallow mergeable else-if chains (prefer match or combined condition)
collapsible_if = "allow" # Disallow nested if statements that can be merged
len_zero = "allow" # Disallow len() == 0 checks (prefer is_empty() for readability/performance)
redundant_pattern_matching = "allow" # Disallow redundant pattern matches (e.g. if let Some(x) = Some(5))
uninlined_format_args = "allow" # Disallow uninlined format_args! usage (low-moderate fix cost)
manual_range_contains = "allow" # Disallow manual range checks (e.g. x >=0 && x <10 → (0..10).contains(&x))
match_like_matches_macro = "allow" # Disallow match expressions replaceable with matches! macro
explicit_auto_deref = "allow" # Disallow redundant explicit auto-dereferencing (e.g. ***x → *x)
needless_borrows_for_generic_args = "allow" # Disallow unnecessary borrows in generic function arguments
while_let_loop = "allow" # Disallow while-let loops replaceable with for loops
manual_flatten = "allow" # Disallow manual iterator flattening (prefer Iterator::flatten())
explicit_counter_loop = "allow" # Disallow explicit counter loops (prefer iterators)
iter_cloned_collect = "allow" # Disallow cloned().collect() patterns (simplify iterator logic)
get_first = "allow" # Disallow manual first-element retrieval (prefer Iterator::first())
missing_transmute_annotations = "allow" # Disallow missing transmute annotations (unsafe code, high audit cost)
needless_range_loop = "allow" # Disallow index-based loops (requires iterator refactoring)
into_iter_on_ref = "allow" # Disallow into_iter() on references (requires iterator usage adjustment)
manual_div_ceil = "allow" # Disallow manual ceiling division (requires Rust 1.68+ DivCeil trait)
bind_instead_of_map = "allow" # Disallow bind-style logic (prefer map() for Option/Result)
box_collection = "allow" # Disallow Box-wrapped collections (e.g. Box<Vec<T>> → Vec<T>; API changes needed)
needless_question_mark = "allow" # Disallow unnecessary ? operator (requires error handling refactoring)
declare_interior_mutable_const = "allow" # Disallow interior mutable constants (thread safety risk)
borrow_interior_mutable_const = "allow" # Disallow borrowing interior mutable constants (thread safety risk)
manual_slice_size_calculation = "allow" # Disallow manual slice size calculation (requires array logic refactor)
macro_metavars_in_unsafe = "allow" # Disallow macro metavariables in unsafe blocks (high risk, full audit required)
expect_fun_call = "allow" # Disallow function calls in expect() arguments (potential side effects)
empty_line_after_outer_attr = "allow" # Disallow missing empty lines after outer attributes (style-only, low value)
module_inception = "allow" # Disallow deep module nesting (requires project structure refactoring)
len_without_is_empty = "allow" # Disallow len() implementation without is_empty() (trait changes needed)
mem_replace_option_with_none = "allow" # Disallow manual mem::replace for Option::None
too_many_arguments = "allow" # Disallow functions with excessive arguments (requires struct encapsulation)
unnecessary_to_owned = "allow" # Disallow unnecessary to_owned() calls (requires ownership logic adjustment)
should_implement_trait = "allow" # Disallow missing standard trait implementations (e.g. Display)
io_other_error = "allow" # Disallow generic io::Error::Other variant (requires specific error types)
extra_unused_lifetimes = "allow" # Disallow unused lifetime annotations (requires lifetime refactoring)
uninit_vec = "allow" # Disallow uninitialized Vec creation (unsafe, high risk)
derived_hash_with_manual_eq = "allow" # Deny derived Hash with manual Eq (may cause inconsistency, requires aligning Hash and Eq)
while_let_on_iterator = "allow" # Disallow while-let constructs on iterators (requires iterator refactoring)
ptr_arg = "allow" # Disallow raw pointer arguments (replace with references/smart pointers)
op_ref = "allow" # Disallow overloaded operators on references (requires trait refactoring)
upper_case_acronyms = "allow" # Disallow non-camel-case acronyms (e.g. HTTPClient → HttpClient; naming changes needed)
approx_constant = "allow" # Disallow hardcoded approximate constants (e.g. 3.14 → f32::consts::PI)
unnecessary_fallible_conversions = "allow" # Disallow unnecessary fallible conversions
borrowed_box = "allow" # Disallow borrowed Box pointers (e.g. &Box<T> → &T; refactoring needed)
unnecessary_lazy_evaluations = "allow" # Disallow unnecessary lazy initialization (e.g. lazy_static)
missing_const_for_thread_local = "allow" # Disallow missing const for thread_local variables (requires thread_local refactoring)


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false

[profile.pre]
inherits = "release"
#incremental = true
opt-level = 1
lto = false
codegen-units = 16
strip = false

[profile.dev]
debug = true
overflow-checks = false

[workspace.dependencies]
auron = { path = "./native-engine/auron" }
auron-jni-bridge = { path = "./native-engine/auron-jni-bridge" }
auron-planner = { path = "./native-engine/auron-planner" }
auron-memmgr = { path = "./native-engine/auron-memmgr" }
datafusion-ext-commons = { path = "./native-engine/datafusion-ext-commons" }
datafusion-ext-exprs = { path = "./native-engine/datafusion-ext-exprs" }
datafusion-ext-functions = { path = "./native-engine/datafusion-ext-functions" }
datafusion-ext-plans = { path = "./native-engine/datafusion-ext-plans" }

# datafusion
datafusion = { version = "49.0.0" }
datafusion-datasource = { version = "49.0.0" }
datafusion-datasource-parquet = { version = "49.0.0" }
datafusion-spark = { version = "49.0.0" }

# orc
orc-rust = { version = "0.7.0" }

# arrow
arrow = { version = "55.2.0", features = ["ffi"]}
arrow-schema = { version = "55.2.0", features = ["serde"] }

# parquet
parquet = { version = "55.2.0" }

# json
serde_json = { version = "1.0.96" }

# other dependencies
async-trait = "0.1.89"
base64 = "0.22.1"
bigdecimal = "0.4.10"
bitvec = "1.0.1"
byteorder = "1.5.0"
bytes = "1.11.0"
bytesize = "2.3.1"
chrono = "0.4.43"
count-write = "0.1.0"
foldhash = "0.2.0"
futures = "0.3"
futures-util = "0.3.31"
hashbrown = "0.14.5"
itertools = "0.14.0"
jni = "0.20.0"
log = "0.4.29"
lz4_flex = "0.12.0"
num = "0.4.2"
object_store = "0.12.4"
once_cell = "1.21.3"
panic-message = "0.3.0"
parking_lot = "0.12.5"
paste = "1.0.15"
procfs = "0.18.0"
prost = "0.14.3"
rand = "0.9.2"
smallvec = "2.0.0-alpha.11"
sonic-rs = "0.5.6"
tempfile = "3"
tokio = "1.49.0"
tonic-build = "0.13.1"
transpose = "0.2.3"
unchecked-index = "0.2.2"
zstd = "0.13.3"

[patch.crates-io]
# datafusion: branch=v49.0.0-blaze
datafusion = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-common = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-expr = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-datasource = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-datasource-parquet = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-execution = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-optimizer = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-physical-expr = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
datafusion-spark = { git = "https://github.com/auron-project/datafusion.git", rev = "9034aeffb"}
orc-rust = { git = "https://github.com/auron-project/datafusion-orc.git", rev = "17f7012"}

# arrow: branch=v55.2.0-blaze
arrow = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-arith = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-array = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-buffer = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-cast = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-data = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-ipc = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-ord = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-row = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-schema = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-select = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
arrow-string = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}
parquet = { git = "https://github.com/auron-project/arrow-rs.git", rev = "5de02520c"}

# serde_json: branch=v1.0.96-blaze
serde_json = { git = "https://github.com/auron-project/json", rev = "95fa6cb" }
